mcp_assistant_update

--- a/LLM2/Interactive_Report_Assistant.ipynb
+++ b/LLM2/Interactive_Report_Assistant.ipynb
@@ -4,7 +4,47 @@
    "cell_type": "markdown",
    "id": "be7b0593",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Report Assistant - MCP Usecase\n",
+    "\n",
+    "Interactive notebook that fetches recent scholarly works (OpenAlex), synthesizes an executive‑style report with Gemini, and optionally writes the report into a Google Doc.\n",
+    "\n",
+    "#### Key components\n",
+    "- OpenAlex client (OpenAlexMCP) to search and format paper metadata.\n",
+    "- Gemini integration (google.generativeai) to synthesize a concise Markdown report from retrieved papers.\n",
+    "- Google Docs helpers (GDocsHelper) to create documents, append text, insert TOC/images, add comments and log actions.\n",
+    "- UI built with ipywidgets: connect to Google, create doc, discover tools, run searches, and send research requests.\n",
+    "- Logging to a local JSONL file (LOG_PATH) for audit of create/append actions.\n",
+    "- Optional Colab one‑click auth and fallback local OAuth flow.\n",
+    "\n",
+    "#### Configurable options\n",
+    "- GEMINI_MODEL, CLIENT_SECRETS_JSON, DEFAULT_TOPIC/TITLE.\n",
+    "- OPENALEX_MAX_RESULTS, OPENALEX_SORT, and RUN_ID/LOG_PATH.\n",
+    "- Widgets to toggle OpenAlex usage and set number of results.\n",
+    "\n",
+    "#### Brief workflow\n",
+    "- Connect to Google APIs (Docs & Drive) via the UI. **1) Connect Google** button\n",
+    "- Create a new Google Doc (header + timestamp). **2) Create Doc** button\n",
+    "- Discover OpenAlex capability and run a paper search for the user query.\n",
+    "- Synthesize a short executive report (Overview, Key Themes, Noteworthy Papers, Gaps & Risks, Next Steps, References) using Gemini.\n",
+    "- Append the synthesized Markdown to the Google Doc and record actions in LOG_PATH.\n",
+    "- View results and interact via the chat UI.\n",
+    "\n",
+    "#### Outputs & artifacts\n",
+    "- Google Doc containing generated reports and appended queries.\n",
+    "- Local audit JSONL of actions (create, append, replace, insert_toc, insert_image).\n",
+    "- On‑screen chat history and discovery output.\n",
+    "\n",
+    "#### Primary use cases\n",
+    "- Rapid research synthesis for executives or product teams.\n",
+    "- Prototype end‑to‑end LLM → retrieval → document automation with auditable actions.\n",
+    "- Teaching/demo of integrating OpenAlex, Gemini, and Google Docs APIs.\n",
+    "\n",
+    "#### Extensibility\n",
+    "- Swap OpenAlex for other retrieval sources or add PDF ingestion.\n",
+    "- Replace Gemini with an alternate LLM or adjust prompt/response_mime_type.\n",
+    "- Extend GDocsHelper to support richer formatting or export workflows."
+   ]
   },
   {
    "cell_type": "code",
@@ -13,9 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEMINI_MODEL = \"gemini-2.5-flash\"\n",
-    "GEMINI_API_KEY = None   # or set via: os.environ['GEMINI_API_KEY'] = '…'\n",
+    "from google.colab import userdata\n",
+    "try:\n",
+    "    import google.generativeai as genai\n",
+    "    genai.configure(api_key=userdata.get('GOOGLE_API_KEY'))\n",
+    "except Exception:\n",
+    "    print(\"Install google-generativeai to enable live calls.\")\n",
     "\n",
+    "GEMINI_MODEL = \"gemini-2.5-pro\"\n",
     "CLIENT_SECRETS_JSON = None  # for local Jupyter OAuth; Colab does one-click auth\n",
     "\n",
     "DEFAULT_TOPIC = \"Executive Report: Recent trends in medical vision AI\"\n",
@@ -122,16 +167,11 @@
     "# Gemini — synthesis from query + retrieved papers\n",
     "import json, os\n",
     "def ensure_gemini_text_model():\n",
-    "    import google.generativeai as genai\n",
-    "    api_key = os.environ.get(\"GEMINI_API_KEY\") or GEMINI_API_KEY\n",
-    "    if not api_key:\n",
-    "        raise RuntimeError(\"Set GEMINI_API_KEY environment variable or fill GEMINI_API_KEY in the config cell.\")\n",
-    "    genai.configure(api_key=api_key)\n",
     "    return genai.GenerativeModel(\n",
     "        GEMINI_MODEL,\n",
-    "        generation_config={\"response_mime_type\":\"text/plain\",\"temperature\":0.2,\"max_output_tokens\":2048},\n",
+    "        generation_config={\"response_mime_type\":\"text/plain\",\"temperature\":0.2},\n",
     "        )\n",
-    "\n",
+    "                    \n",
     "def synthesize_report(user_request: str, works: list):\n",
     "    model = ensure_gemini_text_model()\n",
     "    refs_json = json.dumps(works, ensure_ascii=False)\n",
@@ -164,31 +204,34 @@
     "\n",
     "# Google Docs helpers\n",
     "from googleapiclient.errors import HttpError\n",
-    "\n",
     "class GDocsHelper:\n",
-    "    def init(self, docs_service, drive_service, log_path: str):\n",
-    "        self.docs = docs_service\n",
-    "        self.drive = drive_service\n",
-    "        self.log_path = log_path\n",
-    "    def _log(self, entry: dict):\n",
-    "        entry[\"ts\"] = datetime.now(timezone.utc).isoformat().replace(\"+00:00\",\"Z\")\n",
+    "    def __init__(self, docs, drive, log_path):\n",
+    "        self.docs = docs; self.drive = drive; self.log_path = log_path\n",
+    "    def _log(self, e):\n",
+    "        e[\"ts\"] = datetime.utcnow().isoformat()+\"Z\"\n",
     "        os.makedirs(os.path.dirname(self.log_path), exist_ok=True)\n",
-    "        with open(self.log_path, \"a\") as f:\n",
-    "            f.write(json.dumps(entry)+\"\\\\n\")\n",
-    "\n",
-    "    def create_doc(self, title: str):\n",
-    "        doc = self.docs.documents().create(body={\"title\": title}).execute()\n",
-    "        doc_id = doc[\"documentId\"]\n",
-    "        link = f\"https://docs.google.com/document/d/{doc_id}/edit\"\n",
-    "        self._log({\"event\":\"create_doc\",\"title\":title,\"docId\":doc_id})\n",
-    "        return doc_id, link\n",
-    "\n",
-    "    def append_text(self, doc_id: str, text: str):\n",
-    "        reqs = [{\"insertText\": {\"text\": text + \"\\\\n\\\\n\", \"endOfSegmentLocation\": {}}}]\n",
+    "        with open(self.log_path, \"a\") as f: f.write(json.dumps(e)+\"\\n\")\n",
+    "    def create_doc(self, title):\n",
+    "        d = self.docs.documents().create(body={\"title\": title}).execute()\n",
+    "        doc_id = d[\"documentId\"]; link = f\"https://docs.google.com/document/d/{doc_id}/edit\"\n",
+    "        self._log({\"event\":\"create_doc\",\"title\":title,\"docId\":doc_id}); return doc_id, link\n",
+    "    def append_text(self, doc_id, text):\n",
+    "        reqs=[{\"insertText\":{\"text\":text,\"endOfSegmentLocation\":{}}}]\n",
     "        self.docs.documents().batchUpdate(documentId=doc_id, body={\"requests\": reqs}).execute()\n",
     "        self._log({\"event\":\"append_text\",\"docId\":doc_id,\"chars\":len(text)})\n",
-    "\n",
-    "    def add_comment(self, file_id: str, content: str):\n",
+    "    def replace_all(self, doc_id, query, replace, match_case=False):\n",
+    "        reqs=[{\"replaceAllText\":{\"containsText\":{\"text\":query,\"matchCase\":match_case},\"replaceText\":replace}}]\n",
+    "        self.docs.documents().batchUpdate(documentId=doc_id, body={\"requests\": reqs}).execute()\n",
+    "        self._log({\"event\":\"replace_all\",\"docId\":doc_id,\"query\":query,\"replace_len\":len(replace)})\n",
+    "    def insert_toc(self, doc_id):\n",
+    "        reqs=[{\"insertTableOfContents\":{\"location\":{\"index\":1},\"tableOfContents\":{\"suggestedInsertionIds\":[]}}}]\n",
+    "        self.docs.documents().batchUpdate(documentId=doc_id, body={\"requests\": reqs}).execute()\n",
+    "        self._log({\"event\":\"insert_toc\",\"docId\":doc_id})\n",
+    "    def insert_image(self, doc_id, url, width_pts=360):\n",
+    "        reqs=[{\"insertInlineImage\":{\"location\":{\"endOfSegmentLocation\":{}},\"uri\":url,\"objectSize\":{\"height\":{\"magnitude\":width_pts*0.5625,\"unit\":\"PT\"},\"width\":{\"magnitude\":width_pts,\"unit\":\"PT\"}}}}]\n",
+    "        self.docs.documents().batchUpdate(documentId=doc_id, body={\"requests\": reqs}).execute()\n",
+    "        self._log({\"event\":\"insert_image\",\"docId\":doc_id,\"url\":url})\n",
+    "    def add_comment(self, file_id, content):\n",
     "        self.drive.comments().create(fileId=file_id, body={\"content\": content}).execute()\n",
     "        self._log({\"event\":\"add_comment\",\"fileId\":file_id})\n",
     "\n",
@@ -233,29 +276,29 @@
     "\n",
     "def on_connect(_):\n",
     "    try:\n",
-    "        docs,drive=google_auth()\n",
+    "        docs,drive=google_auth(CLIENT_SECRETS_JSON)\n",
     "        _state[\"docs\"], _state[\"drive\"] = docs, drive\n",
     "        _state[\"helper\"] = GDocsHelper(docs, drive, LOG_PATH)\n",
-    "        doc_link.value = \"Connected to Google APIs ✓\"\n",
+    "        doc_link.value = \"<span style='color:green;'>Connected to Google APIs ✓</span>\"\n",
     "    except Exception as e:\n",
-    "        doc_link.value = f\"Auth error: {e}\"\n",
+    "        doc_link.value = f\"<span style='color:red;'>Auth error: {e}</span>\"\n",
     "\n",
     "def on_create(_):\n",
     "    title = title_in.value.strip() or \"Research Report\"\n",
     "    _state[\"title\"] = title\n",
     "    if not _state.get(\"helper\"):\n",
-    "        doc_link.value = \"Connect to Google first.\"\n",
+    "        doc_link.value = \"<span style='color:red;'>Connect to Google first.</span>\"\n",
     "        return\n",
     "    try:\n",
     "        doc_id, link = _state[\"helper\"].create_doc(title)\n",
     "        _state.update({\"doc_id\": doc_id, \"file_id\": doc_id, \"link\": link})\n",
     "        header = f\"# {title}\\nGenerated: {datetime.now(timezone.utc).isoformat().replace('+00:00','Z')}\\n\\n\"\n",
     "        _state[\"helper\"].append_text(doc_id, header)\n",
-    "        doc_link.value = f\"Open Google Doc\"\n",
+    "        doc_link.value = f\"<a href='{link}' target='_blank'>Open Google Doc</a>\"\n",
     "        history.append((\"Create doc\", f\"Created doc → {title}\"))\n",
     "        render_chat()\n",
     "    except Exception as e:\n",
-    "        doc_link.value = f\"Create error: {e}\"\n",
+    "        doc_link.value = f\"<span style='color:red;'>Create error: {e}</span>\"\n",
     "\n",
     "def on_discover(_):\n",
     "    tools = openalex_server.capabilities()\n",
